feat: 예외 메시지 관련 상수 분리
enum을 사용하여 예외 메시지를 관리합니다.
가독성을 위해 메서드명과 순서를 조정합니다.
검증 관련 테스트 코드를 보완합니다.